682 item 1: raise DEFAULT_WORKER_HEAP 512m -> 1g on measured evidence (348M live-set peak, 5 G1 evacuation failures at ~74% enrichment, desktop-mixed-v1 2286 docs); derivation recorded at the constant site; tempdoc as-built for all three items